// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs component should concat classname in props with classname 1`] = `
<DocumentFragment>
  <div
    class="tabs-container"
  >
    <nav
      class="tabs other-class test"
    >
      <ul />
    </nav>
  </div>
</DocumentFragment>
`;

exports[`Tabs component should have custom inline styles 1`] = `
<DocumentFragment>
  <div
    class="tabs-container"
  >
    <section
      class="tabs"
      style="width: 200px; z-index: 1;"
    >
      <ul>
        This should be a section with custom styles
      </ul>
    </section>
  </div>
</DocumentFragment>
`;

exports[`Tabs component should render 1`] = `
<DocumentFragment>
  <div
    class="tabs-container"
  >
    <nav
      class="tabs"
    >
      <ul>
        Content
      </ul>
    </nav>
  </div>
</DocumentFragment>
`;

exports[`Tabs component should render 2`] = `
<DocumentFragment>
  <li
    class=""
  >
    <a>
      Content
    </a>
  </li>
</DocumentFragment>
`;

exports[`Tabs component should render as an html section 1`] = `
<DocumentFragment>
  <div
    class="tabs-container"
  >
    <section
      class="tabs"
    >
      <ul>
        This should be a section
      </ul>
    </section>
  </div>
</DocumentFragment>
`;

exports[`Tabs component should render component with different tag 1`] = `
<DocumentFragment>
  <div
    class="tabs-container"
  >
    <li
      class="tabs"
    >
      Custom
      <ul>
        This should be a li element
      </ul>
    </li>
  </div>
</DocumentFragment>
`;

exports[`Tabs component should render propertly Inside Tabs 1`] = `
<DocumentFragment>
  <div
    class="tabs-container"
  >
    <nav
      class="tabs"
    >
      <ul>
        <li
          class=""
        >
          <a>
            Tab 1
          </a>
        </li>
        <li
          class=""
        >
          <a>
            Tab 2
          </a>
        </li>
        <li
          class=""
        >
          <a>
            Tab 3
          </a>
        </li>
      </ul>
    </nav>
  </div>
</DocumentFragment>
`;
